updated broken contact link
yup

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a href="tel:(555)555-5555">(555) 555-5555</a><br>
                     <a href="mailto:klathos@asu.edu">Email Katherine Hillerman</a><br>
                 </address>
-                <p>You can also <a href="#contact">contact us by filling out the contact form on our site</a>.</p>
+                <p>You can also <a href="contact.html#contact">contact us by filling out the contact form on our site</a>.</p>
             </section>
             <p>Copyright &copy; 2023 - GIT215 - Prof. Hillerman</p>
         </footer>
